// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InspectorComponent should render InspectorComponent 0: test--0 1`] = `
Array [
  <div
    className="components-panel__body inspector-test is-opened"
  >
    <a
      href="http://example.com/test1"
      key="2---0/.0"
    >
      test1
    </a>
    <a
      href="http://example.com/test2"
      key="3---0/.0"
    >
      test2
    </a>
    <div
      className="additional-inspector-test1"
      key="additional-inspector-0"
    >
      test1
    </div>
    <div
      className="additional-inspector-test2"
      key="additional-inspector-1"
    >
      test2
    </div>
  </div>,
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        Array [
          "",
          "",
          <div
            aria-activedescendant={null}
            aria-label="Write quote…"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text block-editor-rich-text__editable"
            contentEditable={true}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />,
        ]
        Array [
          "",
          "",
          <div
            aria-activedescendant={null}
            aria-label="Write citation…"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
            contentEditable={true}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />,
        ]
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`InspectorComponent should render InspectorComponent 1: test--1 1`] = `
Array [
  <div
    className="components-panel__body inspector-test"
  />,
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        Array [
          "",
          "",
          <div
            aria-activedescendant={null}
            aria-label="Write quote…"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text block-editor-rich-text__editable"
            contentEditable={true}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />,
        ]
        Array [
          "",
          "",
          <div
            aria-activedescendant={null}
            aria-label="Write citation…"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
            contentEditable={true}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />,
        ]
      </blockquote>,
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`InspectorComponent should render InspectorComponent 2: test--2 1`] = `
Array [
  "",
  Array [
    Array [
      Array [
        "",
        "",
      ],
      <blockquote
        className="wp-block-quote test-block-edit"
      >
        Array [
          "",
          "",
          <div
            aria-activedescendant={null}
            aria-label="Write quote…"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text block-editor-rich-text__editable"
            contentEditable={true}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />,
        ]
        Array [
          "",
          "",
          <div
            aria-activedescendant={null}
            aria-label="Write citation…"
            aria-multiline={true}
            aria-owns={null}
            className="rich-text block-editor-rich-text__editable wp-block-quote__citation"
            contentEditable={true}
            onBlur={[Function]}
            onCompositionEnd={[Function]}
            onCompositionStart={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            onPaste={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            role="textbox"
            style={
              Object {
                "whiteSpace": "pre-wrap",
              }
            }
            suppressContentEditableWarning={true}
          />,
        ]
      </blockquote>,
    ],
    "",
    Array [
      "",
      "",
    ],
  ],
]
`;
